# toppra-acceleration

./: .gitignore  LICENSE  README.md
hls/: Makefile
hls/src/toppra/solver/: seidel-parallel-hls.cpp
hls/toppra_hls.prj/: vivado_hls.app
hls/toppra_hls.prj.v2018/: .cproject  .project  vivado_hls.app
hls/toppra_hls.prj.v2018/.apc/: autopilot.apfmapping
hls/toppra_hls.prj.v2018/solution1/: script.tcl  solution1.aps
hls/toppra_hls.prj.v2018/solution1/.autopilot/: .autopilot_exit
hls/toppra_hls.prj.v2020/: .cproject  .project  hls.app
hls/toppra_hls.prj.v2020/.apc/: autopilot.apfmapping
hls/toppra_hls.prj.v2020/solution1/: script.tcl  solution1.aps
hls/toppra_hls.prj.v2020/solution1/.autopilot/: .autopilot_exit
hls/toppra_hls.prj.v2020/solution1/.autopilot/db/: .message_csim.xml
hls/toppra_hls.prj/solution1/: script.tcl  solution1.aps
source/: CMakeLists.txt  README.md
source/cmake/: FindqpOASES.cmake
source/src/: CMakeLists.txt
source/src/toppra/: algorithm.cpp  solver.hpp
source/src/toppra/solver/: seidel-internal.hpp  seidel-parallel-hls.hpp  seidel-parallel.cpp  seidel-parallel.hpp  seidel.cpp
